add in solution

--- a/starter/level-three.html
+++ b/starter/level-three.html
@@ -10,6 +10,7 @@
   <body class="level level-three">
 
     <main>
+
       <header class="level-header">
         <div class="container">
           <div class="level-header__title">
@@ -23,12 +24,17 @@
           </div>
         </div>
       </header>
-      <section class="level-arena">
-        <span class="ball js-ball"></span>
-        <span class="ball js-ball"></span>
-        <span class="ball js-ball"></span>
-        <span class="ball js-ball"></span>
+
+      <section class="level-arena js-arena">
+        <span class="ball js-ball" data-increment="20"></span>
+        <span class="ball js-ball" data-increment="5"></span>
+        <span class="ball js-ball" data-increment="10"></span>
       </section>
+
+      <section class="level-winner">
+        <h1 class="title --xl-large">Winner!</h1>
+      </section>
+
       <footer class="level-footer">
         <div class="container">
           <nav class="level-nav">
@@ -40,6 +46,7 @@
           </nav>
         </div>
       </footer>
+
     </main>
 
     <script src="level-three.js" charset="utf-8"></script>
