--- a/starter/level-one.html
+++ b/starter/level-one.html
@@ -10,6 +10,7 @@
   <body class="level level-one">
 
     <main>
+
       <header class="level-header">
         <div class="container">
           <div class="level-header__title">
@@ -23,9 +24,16 @@
           </div>
         </div>
       </header>
+
       <section class="level-arena">
         <span class="ball js-ball"></span>
       </section>
+
+      <section class="level-winner">
+        <h1 class="title --xl-large">Winner!</h1>
+        <p>Proceed to the next level: <a href="level-two.html">Level Two</a></p>
+      </section>
+
       <footer class="level-footer">
         <div class="container">
           <nav class="level-nav">
@@ -37,6 +45,7 @@
           </nav>
         </div>
       </footer>
+
     </main>
 
     <script src="level-one.js" charset="utf-8"></script>
