--- a/starter/level-two.html
+++ b/starter/level-two.html
@@ -10,6 +10,7 @@
   <body class="level level-two">
 
     <main>
+
       <header class="level-header">
         <div class="container">
           <div class="level-header__title">
@@ -23,9 +24,18 @@
           </div>
         </div>
       </header>
-      <section class="level-arena">
+
+      <section class="level-arena js-arena">
+        <span class="ball js-ball"></span>
+        <span class="ball js-ball"></span>
         <span class="ball js-ball"></span>
       </section>
+
+      <section class="level-winner">
+        <h1 class="title --xl-large">Winner!</h1>
+        <p>Proceed to the next level: <a href="level-three.html">Level Three</a></p>
+      </section>
+
       <footer class="level-footer">
         <div class="container">
           <nav class="level-nav">
@@ -37,6 +47,7 @@
           </nav>
         </div>
       </footer>
+
     </main>
 
     <script src="level-two.js" charset="utf-8"></script>
